# aho-sweeper

./: README.md  meson.build
etc/: com.github.aharotias2.aho-sweeper.desktop
flatpak/: com.github.aharotias2.aho-sweeper.yml
src/: aho-sweeper.vala
